force-app/main/default/objects/geopointe__GP_Folder__c/geopointe__GP_Folder__c.object-meta.xml
<CustomObject>
    <description>Folder for Geopointe objects such as Data Sets.</description>
    <label>Geopointe Folder</label>
    <nameField>
        <label>Geopointe Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Folders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>