force-app/main/default/objects/geopointe__GP_Folder__c/fields/geopointe__Inherit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Inherit_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherit Sharing</label>
    <type>Checkbox</type>
</CustomField>