force-app/main/default/objects/geopointe__GP_Folder__c/fields/geopointe__Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipLabel>Child Folders</relationshipLabel>
    <relationshipName>Child_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>