force-app/main/default/objects/geopointe__GP_Folder__c/fields/geopointe__Scorecard_Integration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scorecard_Integration__c</fullName>
    <label>Scorecard Integration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>