force-app/main/default/objects/geopointe__GP_Folder__c/fields/geopointe__Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Type__c</fullName>
    <description>The type of objects contained in this folder</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Set</fullName>
                <default>true</default>
                <label>Data Set</label>
            </value>
            <value>
                <fullName>Shape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>